Internal change
PiperOrigin-RevId: 415136226